--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .main{
-    background-color: rgb(211, 231, 231);
+    /* background-color: rgba(205, 205, 206, 0.242); */
     padding-bottom: 3rem;
 }
 
