--- a/styles.css
+++ b/styles.css
@@ -449,7 +449,7 @@
 }
 
 .hiring-companies-based-carousel-card {
-    height: 20rem;
+    height: 10rem;
     min-width: 220px;
     background-color: #ffffff;
     border-radius: 8px;
@@ -460,7 +460,8 @@
 }
 
 .hiring-companies-based-company-logo {
-    max-width: 5rem;
+    width: 5rem;
+
     margin: 0 auto 10px;
     border-radius: 0.2rem;
 }
@@ -482,7 +483,7 @@
     font-weight: 700;
 }
 
-.hiring-companies-based-view-all {
+/* .hiring-companies-based-view-all {
     padding: 8px 16px;
     color: #000000;
     border: none;
@@ -491,7 +492,7 @@
     cursor: pointer;
     font-size: 14px;
     text-decoration: none;
-}
+} */
 
 .hiring-companies-based-view-all:hover {
     color: #fff;
@@ -505,7 +506,7 @@
 }
 
 .hiring-companies-based-scroll-track {
-    position: absolute;
+    /* position: absolute; */
     height: 4px;
     width: 100%;
     top: 19.8rem;
