--- a/styles.css
+++ b/styles.css
@@ -766,16 +766,16 @@
 .service-btn {
     display: flex;
     align-items: center;
-    gap: 1rem;
-    border: 1px solid rgb(212, 212, 212);
+    gap: 0.8rem;
+    border: 1px solid rgb(181, 181, 181);
     border-radius: 20px;
-    padding: 0.8rem;
+    padding: 0.3rem;
     width: auto;
     justify-content: center;
 }
 
 .service-btn .icon {
-    font-size: 1.5rem;
+    font-size: 0.9rem;
     color: #096eb6;
 }
 
@@ -792,6 +792,7 @@
 .text-center-small {
     font-size: 0.7rem;
     color: rgb(65, 64, 64);
+    /* margin-left: 60.5rem; */
 }
 
 
